--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "scripts": {
     "start": "node server/server.js",
-    "client": "react-scripts start",
+    "client": "react-scripts --openssl-legacy-provider start",
     "server": "nodemon --watch server server/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
